--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link 
     rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="gradient">
     <h1>BACKGROUND GENERATOR</h1>
-    <input type="color" name="color1" value="#00FF00">
-    <input type="color" name="color2" value="#00FFFF">
+    <input class="color1" type="color" name="color1" value="#00FF00">
+    <input class="color2" type="color" name="color2" value="#00FFFF">
     <br>
     <h2>SET YOUR OWN BACKGROUND</h2>
     <h3></h3>
